[project]
name = "nyoetools.py"
version = "0.0.1"
description = "A discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "deepl>=1.15.0",
    "pytz>=2024.1",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "selenium>=4.15.0",
    "osrparse>=6.0.0",
    "dnspython",
    "python-whois",
]